# chatops

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: build.yml  publish.yml
chatops/: __init__.py  cli.py  config.py  config_cli.py  cost.py  cve.py  deploy.py  incident.py  logs.py  security.py  suggest.py  support.py
docs/: CONTRIBUTING.md
