[metadata]
name = chatops-toolkit
version = 0.1.0
author = Example Author
description = Command line toolkit for operations teams
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    typer>=0.9

[options.entry_points]
console_scripts =
    chatops-toolkit = chatops.cli:app
